--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -27,16 +27,16 @@ jobs:
       - name: 下载文件
         run: |
           python ./download.py
-
       - name: 设置变量
         id: compile
         run: |
-          echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+          echo "FILE_DATE=_$(date +"%Y%m%d-%H:%M")" >> $GITHUB_ENV
       - name: Upload bin directory
         uses: actions/upload-artifact@main
         with:
           name: bgcode${{ env.FILE_DATE }}
           path: ./ruanjian.zip
+
       - name: Generate release tag
         id: tag
         run: |
@@ -52,4 +52,16 @@ jobs:
           tag_name: ${{ steps.tag.outputs.release_tag }}
           body_path: release.txt
           files: ./ruanjian.zip
-        
+      - name: Delete workflow runs
+        uses: GitRML/delete-workflow-runs@main
+        with:
+          retain_days: 1
+          keep_minimum_runs: 3
+    
+      - name: Remove old Releases
+        uses: dev-drprasad/delete-older-releases@v0.1.0
+        with:
+          keep_latest: 3
+          delete_tags: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_GIT_TOKEN }}
