--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -30,7 +30,7 @@ jobs:
       - name: 设置变量
         id: compile
         run: |
-          echo "FILE_DATE=_$(date +"%Y%m%d-%H:%M")" >> $GITHUB_ENV
+          echo "FILE_DATE=_$(date +"%Y%m%d-%H%M")" >> $GITHUB_ENV
       - name: Upload bin directory
         uses: actions/upload-artifact@main
         with:
