--- a/.github/workflows/downloadapp.yml
+++ b/.github/workflows/downloadapp.yml
@@ -1,9 +1,11 @@
-name: Create Release with Zip
+name: 下载软件并发布文件
 
 on:
   push:
     branches:
       - main
+  schedule:
+   - cron: 0 17 * * 5
 env:
   TZ: Asia/Shanghai
 jobs:
@@ -61,7 +63,7 @@ jobs:
       - name: Remove old Releases
         uses: dev-drprasad/delete-older-releases@v0.1.0
         with:
-          keep_latest: 3
+          keep_latest: 4
           delete_tags: true
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GIT_TOKEN }}
