--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -35,13 +35,13 @@ jobs:
         run: |
           echo "bgcode=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
     
-      - name: Upload bin directory
+      - name: 上传文件
         uses: actions/upload-artifact@main
         with:
           name: bgcode_${{ env.bgcode }}
           path: ./ruanjian.zip
 
-      - name: Generate release tag
+      - name: 创建分枝
         id: tag
         run: |
           echo "release_tag=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
@@ -62,10 +62,11 @@ jobs:
           response=$(curl -s https://api.github.com/repos/MetaCubeX/ClashX.Meta/releases/latest)
           links=($(echo "$response" | grep 'browser_download_url' | cut -d'"' -f4 ))[0]
           stripped_link=$(echo "$link" | sed 's~^https://github.com~~')
-          url=${link_url[$((jiashua))]}$stripped_link
+          jiashua=$((RANDOM % ${#link_url[@]}))
+          url=${link_url[$jiashua]}$stripped_link
           echo "$url" >> release.txt
       
-      - name: Upload firmware to release
+      - name: 发布到release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GIT_TOKEN}}
@@ -74,13 +75,13 @@ jobs:
           body_path: release.txt
           files: ./ruanjian.zip
 
-      - name: Delete workflow runs
+      - name: 删除过去的workflow
         uses: GitRML/delete-workflow-runs@main
         with:
           retain_days: 1
           keep_minimum_runs: 3
     
-      - name: Remove old Releases
+      - name: 删除老的Releases
         uses: dev-drprasad/delete-older-releases@v0.1.0
         with:
           keep_latest: 4
