--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -64,7 +64,8 @@ jobs:
             )
             jiashua=$((RANDOM % ${#link_url[@]}))
             url=${link_url[$jiashua]}"/bgvioletsky/DownloadApp/releases/download/"${{ env.release_tag}}"/ruanjian.zip"
-            echo "$url" >> release.txt
+            echo "🔗 [下载]("$url")">> release.txt
+            # echo "$url" >> release.txt
                       
         
         
