--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -40,7 +40,11 @@ jobs:
         with:
           name: bgcode_${{ env.bgcode }}
           path: ./ruanjian.zip
-
+      - name: 上传文件
+        uses: actions/upload-artifact@main
+        with:
+            name: bgcode1_${{ env.bgcode }}
+            path: ./path/*
       - name: 创建分枝
         id: tag
         run: |
@@ -81,11 +85,11 @@ jobs:
       - name: 删除过去的workflow
         uses: GitRML/delete-workflow-runs@main
         with:
-          retain_days: 7
+          retain_days: 2
           keep_minimum_runs: 4
-          token: ${{ secrets.MY_GIT_TOKEN }}
-          repository: bgvioletsky/DownloadApp
-
+          # token: ${{ secrets.MY_GIT_TOKEN }}
+          token: ${{ github.token }}
+          repository:  ${{ github.repository }}
 
 
 
