--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -37,7 +37,7 @@ jobs:
         id: compile
         run: |
           echo "bgcode=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
-          FILE_NAMES=$(ls /path)
+          FILE_NAMES=$(ls ./path)
           echo "FILE_NAMES=${FILE_NAMES}" >> $GITHUB_ENV
           echo "${{ env.FILE_NAMES}}"
     
