--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -2,14 +2,17 @@ name: 下载软件并发布文件
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
   schedule:
    - cron: 0 17 * * 5
 env:
   TZ: Asia/Shanghai
-  UPLOAD_1: false
+  UPLOAD_1: true 
+  UPLOAD_2: true 
+  UPLOAD_3: true 
+  UPLOAD_4: true
   
 jobs:
   build:
@@ -37,10 +40,11 @@ jobs:
         id: compile
         run: |
           echo "bgcode=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
-          FILE_NAMES=$(ls ./path)
-          # echo "FILE_NAMES=${FILE_NAMES}" >> $GITHUB_ENV
-          # echo "${{ env.FILE_NAMES}}"
-          echo "${FILE_NAMES}"
+          FILE_NAMES=$((ls ./path))
+          echo "FILE_NAMES1=${FILE_NAMES[1]}" >> $GITHUB_ENV
+          echo "FILE_NAMES2=${FILE_NAMES[2]}" >> $GITHUB_ENV
+          echo "FILE_NAMES3=${FILE_NAMES[3]}" >> $GITHUB_ENV
+          echo "FILE_NAMES4=${FILE_NAMES[4]}" >> $GITHUB_ENV
     
       - name: 上传文件
         uses: actions/upload-artifact@main
@@ -48,12 +52,30 @@ jobs:
           name: bgcode_${{ env.bgcode }}
           path: ./ruanjian.zip
 
-      - name: 上传文件
+      - name: 上传文件1
         if: env.UPLOAD_1 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
         with:
-            name: bgcode1_${{ env.bgcode }}
-            path: ./path/*
+            name: bgcode_${{ env.FILE_NAMES1 }}
+            path: ./path/${{ env.FILE_NAMES1 }}
+      - name: 上传文件2
+        if: env.UPLOAD_2 == 'true' && !cancelled()
+        uses: actions/upload-artifact@main
+        with:
+            name: bgcode_${{ env.FILE_NAMES2 }}
+            path: ./path/${{ env.FILE_NAMES2 }}
+      - name: 上传文件3
+        if: env.UPLOAD_3 == 'true' && !cancelled()
+        uses: actions/upload-artifact@main
+        with:
+            name: bgcode_${{ env.FILE_NAMES3 }}
+            path: ./path/${{ env.FILE_NAMES3 }}
+      - name: 上传文件4
+        if: env.UPLOAD_4 == 'true' && !cancelled()
+        uses: actions/upload-artifact@main
+        with:
+            name: bgcode_${{ env.FILE_NAMES4 }}
+            path: ./path/${{ env.FILE_NAMES4 }}
 
       - name: 创建分枝
         id: tag
