--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -40,7 +40,7 @@ jobs:
         id: compile
         run: |
           echo "bgcode=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
-          FILE_NAMES=$((ls ./path))
+          FILE_NAMES=($(ls ./path))
           echo "FILE_NAMES1=${FILE_NAMES[1]}" >> $GITHUB_ENV
           echo "FILE_NAMES2=${FILE_NAMES[2]}" >> $GITHUB_ENV
           echo "FILE_NAMES3=${FILE_NAMES[3]}" >> $GITHUB_ENV
