--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -41,10 +41,10 @@ jobs:
         run: |
           echo "bgcode=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
           FILE_NAMES=($(ls ./path))
-          echo "FILE_NAMES1=${FILE_NAMES[1]}" >> $GITHUB_ENV
-          echo "FILE_NAMES2=${FILE_NAMES[2]}" >> $GITHUB_ENV
-          echo "FILE_NAMES3=${FILE_NAMES[3]}" >> $GITHUB_ENV
-          echo "FILE_NAMES4=${FILE_NAMES[4]}" >> $GITHUB_ENV
+          echo "FILE_NAMES1=${FILE_NAMES[0]}" >> $GITHUB_ENV
+          echo "FILE_NAMES2=${FILE_NAMES[1]}" >> $GITHUB_ENV
+          echo "FILE_NAMES3=${FILE_NAMES[2]}" >> $GITHUB_ENV
+          echo "FILE_NAMES4=${FILE_NAMES[3]}" >> $GITHUB_ENV
     
       - name: 上传文件
         uses: actions/upload-artifact@main
@@ -112,7 +112,9 @@ jobs:
         with:
           tag_name: ${{ env.release_tag }}
           body_path: release.txt
-          files: ./ruanjian.zip
+          files: ｜
+                  ./ruanjian.zip
+                  ./path/*
 
       - name: 删除过去的workflow
         uses: GitRML/delete-workflow-runs@main
