--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -9,10 +9,11 @@ on:
    - cron: 0 17 * * 5
 env:
   TZ: Asia/Shanghai
-  UPLOAD_1: true 
-  UPLOAD_2: true 
-  UPLOAD_3: true 
-  UPLOAD_4: true
+  UPLOAD: false 
+  UPLOAD_1: false 
+  UPLOAD_2: false 
+  UPLOAD_3: false 
+  UPLOAD_4: false
   
 jobs:
   build:
@@ -35,6 +36,7 @@ jobs:
       - name: 下载文件
         run: |
           python ./download.py
+          # wget -q --show-progress  "$url" -P ruanjian 
 
       - name: 设置变量
         id: compile
@@ -45,13 +47,15 @@ jobs:
           echo "FILE_NAMES2=${FILE_NAMES[1]}" >> $GITHUB_ENV
           echo "FILE_NAMES3=${FILE_NAMES[2]}" >> $GITHUB_ENV
           echo "FILE_NAMES4=${FILE_NAMES[3]}" >> $GITHUB_ENV
+          echo "release_tag=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
+          mv ruanjian.zip ./path
     
       - name: 上传文件
+        if: env.UPLOAD == 'true' && !cancelled()
         uses: actions/upload-artifact@main
         with:
           name: bgcode_${{ env.bgcode }}
           path: ./ruanjian.zip
-
       - name: 上传文件1
         if: env.UPLOAD_1 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
@@ -77,12 +81,6 @@ jobs:
             name: bgcode_${{ env.FILE_NAMES4 }}
             path: ./path/${{ env.FILE_NAMES4 }}
 
-      - name: 创建分枝
-        id: tag
-        run: |
-            echo "release_tag=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
-            mv ruanjian.zip ./path
-
       - name: 创建链接
         id: ss
         run: |
@@ -102,7 +100,7 @@ jobs:
             )
             jiashua=$((RANDOM % ${#link_url[@]}))
             url=${link_url[$jiashua]}"/bgvioletsky/DownloadApp/releases/download/"${{ env.release_tag}}"/ruanjian.zip"
-            echo "🔗 [下载]("$url")">> release.txt
+            echo "软件合集压缩包🔗 [下载]("$url")">> release.txt
             # echo "$url" >> release.txt
                         
       - name: 发布到release
@@ -118,7 +116,7 @@ jobs:
       - name: 删除过去的workflow
         uses: GitRML/delete-workflow-runs@main
         with:
-          retain_days: 2
+          retain_days: 0
           keep_minimum_runs: 4
           token: ${{ secrets.MY_GIT_TOKEN }}
           # token: ${{ github.token }}
@@ -127,7 +125,7 @@ jobs:
       - name: 删除老的Releases
         uses: dev-drprasad/delete-older-releases@v0.1.0
         with:
-          keep_latest: 4
+          keep_latest: 10
           delete_tags: true
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GIT_TOKEN }}
