--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -9,7 +9,7 @@ on:
    - cron: 0 17 * * 5
 env:
   TZ: Asia/Shanghai
-  UPLOAD: true 
+  UPLOAD_9: true 
   UPLOAD_1: true 
   UPLOAD_2: true 
   UPLOAD_3: true 
@@ -46,6 +46,7 @@ jobs:
         id: compile
         run: |
           echo "bgcode=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
+          mv ruanjian.zip ./path
           FILE_NAMES=($(ls ./path))
           count=1
           for filename in "${FILE_NAMES[@]}"; do
@@ -56,11 +57,11 @@ jobs:
           mv ruanjian.zip ./path
     
       - name: 上传文件
-        if: env.UPLOAD == 'true' && !cancelled()
+        if: env.UPLOAD_9 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
         with:
-          name: bgcode_${{ env.bgcode }}
-          path: ./ruanjian.zip
+          name: bgcode_${{ env.FILE_NAMES9 }}
+          path: ./path/${{ env.FILE_NAMES9 }}
       - name: 上传文件1
         if: env.UPLOAD_1 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
