--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -9,15 +9,15 @@ on:
    - cron: 0 17 * * 5
 env:
   TZ: Asia/Shanghai
-  UPLOAD_9: true 
+  UPLOAD_9: fales 
   UPLOAD_1: true 
   UPLOAD_2: true 
   UPLOAD_3: true 
   UPLOAD_4: true
-  UPLOAD_5: true 
-  UPLOAD_6: true 
-  UPLOAD_7: true
-  UPLOAD_8: true
+  UPLOAD_5: fales 
+  UPLOAD_6: fales 
+  UPLOAD_7: fales
+  UPLOAD_8: fales
   
 jobs:
   build:
@@ -54,7 +54,6 @@ jobs:
             ((count++))
           done
           echo "release_tag=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
-          mv ruanjian.zip ./path
     
       - name: 上传文件
         if: env.UPLOAD_9 == 'true' && !cancelled()
