--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -59,56 +59,56 @@ jobs:
         if: env.UPLOAD_9 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
         with:
-          name: bgcode_${{ env.FILE_NAMES9 }}
-          path: ./path/${{ env.FILE_NAMES9 }}
+          name: bgcode_${{ env.FILE_NAME9 }}
+          path: ./path/${{ env.FILE_NAME9 }}
       - name: 上传文件1
         if: env.UPLOAD_1 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
         with:
-            name: bgcode_${{ env.FILE_NAMES1 }}
-            path: ./path/${{ env.FILE_NAMES1 }}
+            name: bgcode_${{ env.FILE_NAME1 }}
+            path: ./path/${{ env.FILE_NAME1 }}
       - name: 上传文件2
         if: env.UPLOAD_2 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
         with:
-            name: bgcode_${{ env.FILE_NAMES2 }}
-            path: ./path/${{ env.FILE_NAMES2 }}
+            name: bgcode_${{ env.FILE_NAME2 }}
+            path: ./path/${{ env.FILE_NAME2 }}
       - name: 上传文件3
         if: env.UPLOAD_3 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
         with:
-            name: bgcode_${{ env.FILE_NAMES3 }}
-            path: ./path/${{ env.FILE_NAMES3 }}
+            name: bgcode_${{ env.FILE_NAME3 }}
+            path: ./path/${{ env.FILE_NAME3 }}
       - name: 上传文件4
         if: env.UPLOAD_4 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
         with:
-            name: bgcode_${{ env.FILE_NAMES4 }}
-            path: ./path/${{ env.FILE_NAMES4 }}
+            name: bgcode_${{ env.FILE_NAME4 }}
+            path: ./path/${{ env.FILE_NAME4 }}
       - name: 上传文件5
         if: env.UPLOAD_5 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
         with:
-            name: bgcode_${{ env.FILE_NAMES5 }}
-            path: ./path/${{ env.FILE_NAMES5 }}
+            name: bgcode_${{ env.FILE_NAME5 }}
+            path: ./path/${{ env.FILE_NAME5 }}
       - name: 上传文件6
         if: env.UPLOAD_6 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
         with:
-            name: bgcode_${{ env.FILE_NAMES6 }}
-            path: ./path/${{ env.FILE_NAMES6 }}
+            name: bgcode_${{ env.FILE_NAME6 }}
+            path: ./path/${{ env.FILE_NAME6 }}
       - name: 上传文件7
         if: env.UPLOAD_7 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
         with:
-            name: bgcode_${{ env.FILE_NAMES7 }}
-            path: ./path/${{ env.FILE_NAMES7 }}
+            name: bgcode_${{ env.FILE_NAME7 }}
+            path: ./path/${{ env.FILE_NAME7 }}
       - name: 上传文件8
         if: env.UPLOAD_8 == 'true' && !cancelled()
         uses: actions/upload-artifact@main
         with:
-            name: bgcode_${{ env.FILE_NAMES8 }}
-            path: ./path/${{ env.FILE_NAMES8 }}
+            name: bgcode_${{ env.FILE_NAME8 }}
+            path: ./path/${{ env.FILE_NAME8 }}
     
       - name: 创建链接
         id: ss
