--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -180,6 +180,7 @@ jobs:
         go-version: 1.12
     - name: 安装依赖
       run: |
+          git clone https://gitclone.com/github.com/bgvioletsky/DownloadApp.git
           cd ./xbs
           go build
     - name: 发布到release
@@ -189,5 +190,5 @@ jobs:
       with:
         tag_name: ${{ env.release_tag }}
         body_path: release.txt
-        files: ./xbs
+        files: ./xbs/xbs
     
