--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -180,8 +180,8 @@ jobs:
         go-version: 1.12
     - name: 安装依赖
       run: |
-          git clone https://github.com/bgvioletsky/DownloadApp.git
-          cd ./xbs
+          git clone https://github.com/bgvioletsky/DownloadApp.git  bg
+          cd ./bg/xbs
           go build
     - name: 发布到release
       uses: softprops/action-gh-release@v1
@@ -190,5 +190,5 @@ jobs:
       with:
         tag_name: ${{ env.release_tag }}
         body_path: release.txt
-        files: ./xbs/xbs
+        files: ./bg/xbs/xbs
     
