--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,5 +28,5 @@ jobs:
          with:
            tag_name: dsa
            body_path: ./bg/xbs/kk.txt
-           files: ./bg/xbs/xbs
+           files: ./bg/xbs/bin/*
     
